--- a/.github/workflows/sano-tests.yml
+++ b/.github/workflows/sano-tests.yml
@@ -1,17 +1,17 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: tests
+name: sano tests
 
 on:
   push:
-    branches: [ master ]
+    branches: [master]
     paths-ignore:
       - "docs/**"
       - "*.md"
       - "*.rst"
   pull_request:
-    branches: [ master ]
+    branches: [master]
     paths-ignore:
       - "docs/**"
       - "*.md"
@@ -23,8 +23,8 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [ "3.8", "3.9", "3.10", "3.11", "3.12", "3.13" ]
-        flask-version: [ "Flask>=2.0,<3.0", "Flask>=3.0" ]
+        python-version: ["3.9"]
+        flask-version: ["Flask>=2.0,<3.0", "Flask>=3.0"]
     env:
       PYTHONPATH: .
     steps:
@@ -48,9 +48,8 @@ jobs:
           pip install -U -r ./requirements/mypy.txt
           pip install -e .[swagger]
       #          pip install -e .[swagger,redoc,rapidoc,rapipdf,scalar,elements]
-
-      - name: Test with pytest
-        run: pytest tests
+      - name: Test with pytest (sano tests only)
+        run: pytest tests/test_sano.py
 
       - name: ruff
         run: ruff check flask_openapi3 tests examples
